# OpenPLC-CrowPanel

./: .clang-format  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Flash/: README.txt
Flash/configuration/: alarms.yaml
components/c6_fw_update/: CMakeLists.txt  c6_fw_update.c
components/c6_fw_update/include/: c6_fw_update.h
components/data_model/: CMakeLists.txt
components/data_model/include/: data_model.h
components/data_model/src/: data_model.c
components/espressif__esp32_p4_function_ev_board/: CMakeLists.txt  esp32_p4_function_ev_board.c  idf_component.yml
components/espressif__esp32_p4_function_ev_board/include/bsp/: display.h  esp32_p4_function_ev_board.h
components/navigation/: CMakeLists.txt
components/navigation/include/: navigation.h
components/navigation/src/: navigation.c
components/opcua_client/: CMakeLists.txt  README.md
components/opcua_client/include/: opcua_client.h  opcua_open62541.h
components/opcua_client/src/: opcua_client.c
components/open62541/: CMakeLists.txt  README.md  idf_component.yml
components/settings/: CMakeLists.txt  idf_component.yml
components/settings/include/: config_portal.h  credentials.h  openplc_config_portal.h  settings_config.h  settings_events.h  time_sync.h  uart_handler.h  wifi.h  wifi_connectivity.h  wifi_ctrl.h
components/settings/include/ui/: message_box.h  openplc_settings.h  password_dialog.h  system_settings.h  wifi_menu.h
components/settings/src/: config_portal.c  credentials.c  openplc_config_portal.c  settings_config.c  settings_events.c  time_sync.c  uart_handler.c  wifi.c  wifi_connectivity.c  wifi_ctrl.c
components/settings/src/ui/: message_box.c  openplc_settings.c  password_dialog.c  system_settings.c  wifi_menu.c
components/sleep_mode/: CMakeLists.txt
components/sleep_mode/include/: sleep_mode.h
components/sleep_mode/src/: sleep_mode.c
components/trends/: CMakeLists.txt
components/trends/include/: trends.h
components/trends/src/: trends.c
components/ui_generator/: CMakeLists.txt
components/ui_generator/icons/: settings_icon.c
components/wifi_widget/: CMakeLists.txt  idf_component.yml
components/wifi_widget/icons/: wifi_high.c  wifi_low.c  wifi_medium.c  wifi_medium_high.c  wifi_no_internet.c  wifi_off.c
components/wifi_widget/include/: wifi_widget.h
components/wifi_widget/src/: wifi_widget.c
docs/: CROWPANEL_OPCUA_PROTOTYPE.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  idle_monitor.c  idle_monitor.h  main.cpp
simulator/: README.md  compressor_logic.py  fault_scenarios.py  main.py  opcua_server.py  requirements.txt  test_compressor_logic.py  test_opcua_integration.py
simulator/configuration/: equipment.yaml
(+8 files in other folders)
